--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 1.0.0
 
 environment:
-  sdk: '>=3.0.3 <4.0.0'
+  sdk: ">=3.5.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -22,10 +22,9 @@ dependencies:
   firebase_core: ^3.4.0
   firebase_messaging: ^15.1.0
   flutter_local_notifications: ^18.0.1
-  #custom_platform_device_id: ^1.0.8
   google_place: ^0.4.7
   app_tracking_transparency: ^2.0.3
-  geolocator: ^12.0.0
+  geolocator: ^13.0.2
   geocoding:
   collection: ^1.17.1
   path_provider: ^2.1.1
@@ -35,14 +34,14 @@ dependencies:
   cross_file: ^0.3.4+1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  mime: ^1.0.0
+  mime: ^2.0.0
   http: ^0.13.6
 
 dev_dependencies:
   build_runner: ^2.4.5
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
   mockito: ^5.4.1
   stacked_generator: ^1.3.3
 
