--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 1.0.0
 
 environment:
-  sdk: ">=3.5.0 <4.0.0"
+  sdk: ">=3.5.4 <4.0.0"
 
 dependencies:
   flutter:
@@ -22,7 +22,6 @@ dependencies:
   firebase_core: ^3.4.0
   firebase_messaging: ^15.1.0
   flutter_local_notifications: ^18.0.1
-  google_place: ^0.4.7
   app_tracking_transparency: ^2.0.3
   geolocator: ^13.0.2
   geocoding:
@@ -30,12 +29,14 @@ dependencies:
   path_provider: ^2.1.1
   sign_in_with_apple: ^6.1.1
   firebase_dynamic_links: ^6.0.5
-  intl: ^0.19.0
+  intl: ^0.20.2
   cross_file: ^0.3.4+1
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   mime: ^2.0.0
-  http: ^0.13.6
+  http: ^1.2.1
+  google_api_headers: ^4.3.4
+  flutter_google_places_sdk: ^0.3.10
 
 dev_dependencies:
   build_runner: ^2.4.5
